--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <script src="phaser.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <title>Multiplayer Concept</title>
 </head>
 <body>
 <h1>Text</h1>
 <script type="module" src="index.js"></script>
+<!--<script src="/js/client.js"></script>-->
 </body>
 </html>
