--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+<!--    Load Phaser and Socket.io, the two scripts that is not from me-->
     <script src="phaser.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <title>Multiplayer Concept</title>
