removed extra image added preload text

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Minimal website</title>
     <link rel="stylesheet" href="css/horizontal_menu.css">
-    <link rel="stylesheet" href="css/game.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div id="icon">
@@ -20,6 +20,12 @@
     </ul>
 </div>
 <div class="game" id="game"></div>
+<div class="beforeLoad">
+    <h1>Welcome to this game!</h1>
+    <p>The purpose of this game is to let you be familiar with the environment before entering HKUST</p>
+    <p>We hope you enjoy it</p>
+    <p>Now please give the game some time to load, the first time takes longer</p>
+</div>
 
 <script type="module" src="index.js"></script>
 <script src="phaser.js"></script>
