added some maps made credits

--- a/public/credits.html
+++ b/public/credits.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<body>
 <div id="icon">
     <a id="title" href="index.html">USTown.live</a>
 </div>
@@ -19,17 +20,13 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </div>
-<div class="game" id="game"></div>
-<div class="beforeLoad">
-    <h1>Welcome to this game!</h1>
-    <p>The purpose of this game is to let you be familiar with the environment before entering HKUST</p>
-    <p>We hope you enjoy it</p>
-    <p>Now please give the game some time to load, the first time takes longer</p>
+<div id="credits">
+    <div class="credit">
+        <h2>This item</h2>
+        <p>This item is made by, used in this place and that place, witch is pretty good</p>
+        <a href="#"><h3>This guy / website</h3></a>
+    </div>
 </div>
-
-<script type="module" src="index.js"></script>
-<script src="phaser.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-
+<script src="webjs/credits.js"></script>
 </body>
 </html>
