decreased hitbox make moving smoother increase speed update maps

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 </div>
 
 <script type="module" src="index.js"></script>
-<script src="phaser.js"></script>
+<script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 
 </body>
