added all htmls deleted useless assets successfully set up https

--- a/public/contact.html
+++ b/public/contact.html
@@ -19,13 +19,12 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </div>
-<div id="credits">
-        <div class="credit">
-            <h2>This item</h2>
-            <p>This item is made by, used in this place and that place, witch is pretty good</p>
-            <a href="#"><h3>This guy / website</h3></a>
-        </div>
+<div id="contact">
+    <h1>Contact me</h1>
+    <p>You are welcomed to contact me.</p>
+    <h2><a href="mailto:cleeao@connect.ust.hk">Email</a>: cleeao@connect.ust.hk</h2>
+    <h2></h2>
+<!--    ig and email?-->
 </div>
-<script src="webjs/credits.js"></script>
 </body>
 </html>
