added npc changed maps added player tracker on server

--- a/maintenance/credits.html
+++ b/maintenance/credits.html
@@ -19,13 +19,13 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </div>
-<div id="blog">
-<div id="post">
-    <h1>Blog Title</h1>
-    <h2>yyyy-mm-dd</h2>
-    <p>Blog content</p>
+<div id="credits">
+        <div class="credit">
+            <h2>This item</h2>
+            <p>This item is made by, used in this place and that place, witch is pretty good</p>
+            <a href="#"><h3>This guy / website</h3></a>
+        </div>
 </div>
-</div>
-<script src="webjs/blog.js"></script>
+<script src="webjs/credits.js"></script>
 </body>
 </html>
