--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <div class="game" id="game"></div>
 <div class="beforeLoad">
     <h1>Welcome to USTown.live</h1>
-    <p>This game is made to let you be familiar with the environment before entering HKUST</p>
+    <p>This game aims to help you better understand the environment of HKUST</p>
     <p>I hope you enjoy it</p>
     <p>Now please give the game some time to load, the first time takes longer</p>
 </div>
