--- a/maintenance/contact.html
+++ b/maintenance/contact.html
@@ -19,13 +19,12 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </div>
-<div id="blog">
-<div id="post">
-    <h1>Blog Title</h1>
-    <h2>yyyy-mm-dd</h2>
-    <p>Blog content</p>
+<div id="contact">
+    <h1>Contact me</h1>
+    <p>You are welcomed to contact me.</p>
+    <h2><a href="mailto:cleeao@connect.ust.hk">Email</a>: cleeao@connect.ust.hk</h2>
+    <h2></h2>
+<!--    ig and email?-->
 </div>
-</div>
-<script src="webjs/blog.js"></script>
 </body>
 </html>
