change to linked in contact

--- a/public/contact.html
+++ b/public/contact.html
@@ -22,7 +22,7 @@
 <div id="contact">
     <h1>Contact me</h1>
     <p>You are welcomed to contact me.</p>
-    <h2><a href="mailto:cleeao@connect.ust.hk">Email</a>: cleeao@connect.ust.hk</h2>
+    <h2><a href="https://www.linkedin.com/in/chit-lee-uob/">My LinkedIn</a></h2>
     <h2></h2>
 <!--    ig and email?-->
 </div>
